2005-07-05 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b50

	* CHANGE: save_photos.php
		  - Do the copy to local temp dir only for accepted formats (images, movies, archives)	
		  - Use fs_file_get_contents to get the content of the URL
		  - Changed Regexp to catch files from an URL. (Thanks Valiant and Signe)
		    o changed acceptableFormatRegexp() in util.php to fit with new regexp

	* Change: phpdoc changes.

2005-07-04 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b49

	* Fix: Language was not correct set in popups when embedded into mambo
	  Thanks to Kai Tomalik.

2005-07-04 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b48

	* Change: Added 4th to array_sort_by_fields: caseSensitive

	* Change: Display watermakr files alphabetical case insensitve sorted.

2005-07-04 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b47

	* Change: 3rd Param of array_sort_by_fields is now 'asc' or 'desc' instead of 1/-1.

	* Change: itemOptions in view_photo.php are now a dropdown when no icons are wanted.
		  Settings at file beginning can force dropdown with icons on.

	* Fix: Found untranslated text (!) in classes/Album.php
	  Thanks to Gekow.

	* New: Use phpDocumentor compatible documenting. Will be completed step by step.

	* Change: When embeddd into Mambo $mosConfig_lang is now checked.

	* Change: updated Manifest

	* Fix: reworked bulk user creation.
	       - register globals
	       - email problems

	* New: Added two more possible formats for bulk user creation.

	* CHANGE: moved gallery_mail into a wrapper for MAIL class. Removed gallery_smtp

	* Fix: use of gallery_error instead of errorRow classes/gallery/UserDB.php 
	       when creating new user.

2005-06-30 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b46

	* Fix: Fieldtype for Comment Overview in Setup.

	* Change: moved /errors/ to includes/errors/

	* Change: Added multiple headings in properties to reduce tabs.

2005-06-28 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b45

	* Change: Better Text in edit_appearance.php
	