@@ -1,3 +1,11 @@
+2005-07-05 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b51
+
+	* Fix: When deleting on photolevel, jump to next (or previous if at the end) photo.
+	  Thanks to Iain Lea.
+
+	* Fix: Sorting in stats was switched.
+	  Also thanks to Iain Lea.
+	
 2005-07-05 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b50
 
 	* CHANGE: save_photos.php
